--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
+    "clipboardy": "^2.3.0",
     "colornames": "^1.1.1",
+    "dedent": "^0.7.0",
+    "event-kit": "^2.5.3",
+    "grim": "^2.0.2",
+    "idle-callback": "^1.0.3",
     "jest": "^25.2.3",
     "native-keymap": "^2.1.1",
     "node-gtk": "0.3.0",
@@ -32,7 +37,8 @@
     "tree-sitter-python": "^0.16.1",
     "tree-sitter-ruby": "^0.16.1",
     "tree-sitter-rust": "^0.16.0",
-    "tree-sitter-typescript": "^0.16.1"
+    "tree-sitter-typescript": "^0.16.1",
+    "underscore-plus": "^1.7.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3"
