deps: update node-gtk

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "line-top-index": "^0.3.1",
     "lodash.isequal": "^4.5.0",
     "native-keymap": "^2.1.1",
-    "node-gtk": "0.3.0",
+    "node-gtk": "0.6.2",
+    "pathwatcher": "^8.1.0",
     "superstring": "^2.4.2",
     "text-buffer": "^13.17.3",
     "tree-sitter": "^0.16.1",
