chore: cleanup & import files

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "colornames": "^1.1.1",
     "dedent": "^0.7.0",
     "event-kit": "^2.5.3",
-    "grim": "^2.0.2",
+    "fs-plus": "^3.1.1",
+    "grim": "^2.0.3",
     "idle-callback": "^1.0.3",
     "jest": "^25.2.3",
     "line-top-index": "^0.3.1",
