--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "colornames": "^1.1.1",
     "dedent": "^0.7.0",
     "event-kit": "^2.5.3",
+    "first-mate": "^7.4.1",
     "fs-plus": "^3.1.1",
     "grim": "^2.0.3",
     "idle-callback": "^1.0.3",
     "jest": "^25.2.3",
+    "key-path-helpers": "^0.4.0",
     "line-top-index": "^0.3.1",
     "lodash.isequal": "^4.5.0",
     "native-keymap": "^2.1.1",
     "node-gtk": "0.7.0",
+    "oniguruma": "^7.2.1",
     "pathwatcher": "^8.1.0",
+    "postcss-selector-parser": "^6.0.4",
+    "scoped-property-store": "^0.17.0",
+    "season": "^6.0.2",
     "superstring": "^2.4.2",
     "text-buffer": "^13.17.4",
     "tree-sitter": "^0.16.1",
