--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@atom/nsfw": "^1.0.27",
+    "@atom/watcher": "^1.3.5",
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "clipboardy": "^2.3.0",
@@ -18,6 +20,7 @@
     "event-kit": "^2.5.3",
     "first-mate": "^7.4.1",
     "fs-plus": "^3.1.1",
+    "git-utils": "^5.7.1",
     "grim": "^2.0.3",
     "idle-callback": "^1.0.3",
     "jest": "^25.2.3",
@@ -31,6 +34,7 @@
     "postcss-selector-parser": "^6.0.4",
     "scoped-property-store": "^0.17.0",
     "season": "^6.0.2",
+    "service-hub": "^0.7.4",
     "superstring": "^2.4.2",
     "text-buffer": "^13.17.4",
     "tree-sitter": "^0.16.1",
