fix(state-store): use sqlite

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "key-path-helpers": "^0.4.0",
     "line-top-index": "^0.3.1",
     "lodash.isequal": "^4.5.0",
+    "mkdirp": "^1.0.4",
     "native-keymap": "^2.1.1",
     "node-gtk": "0.7.0",
     "oniguruma": "^7.2.1",
@@ -35,6 +36,7 @@
     "scoped-property-store": "^0.17.0",
     "season": "^6.0.2",
     "service-hub": "^0.7.4",
+    "sqlite-objects": "^2.0.3",
     "superstring": "^2.4.2",
     "text-buffer": "^13.17.4",
     "tree-sitter": "^0.16.1",
