--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "workspaces": [
+    "./packages/oniguruma",
+    "./packages/superstring",
+    "./packages/text-buffer"
+  ],
   "dependencies": {
-    "@atom/nsfw": "^1.0.27",
-    "@atom/watcher": "^1.3.5",
+    "@curlconverter/tree-sitter-bash": "^0.0.3",
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "clipboardy": "^2.3.0",
@@ -20,6 +24,7 @@
     "event-kit": "^2.5.3",
     "first-mate": "^7.4.1",
     "fs-plus": "^3.1.1",
+    "fuzzy": "^0.1.3",
     "git-utils": "^5.7.1",
     "grim": "^2.0.3",
     "idle-callback": "^1.0.3",
@@ -28,32 +33,29 @@
     "line-top-index": "^0.3.1",
     "lodash.isequal": "^4.5.0",
     "mkdirp": "^1.0.4",
-    "native-keymap": "^2.1.1",
-    "node-gtk": "0.7.0",
-    "oniguruma": "^7.2.1",
+    "native-keymap": "^3.3.4",
+    "node-gtk": "^0.11.0",
     "pathwatcher": "^8.1.0",
     "postcss-selector-parser": "^6.0.4",
     "scoped-property-store": "^0.17.0",
     "season": "^6.0.2",
     "service-hub": "^0.7.4",
     "sqlite-objects": "^2.0.3",
-    "superstring": "^2.4.2",
     "text-buffer": "^13.17.4",
-    "tree-sitter": "^0.16.1",
-    "tree-sitter-bash": "^0.16.1",
-    "tree-sitter-c": "^0.16.1",
-    "tree-sitter-cpp": "^0.16.0",
-    "tree-sitter-css": "^0.16.0",
-    "tree-sitter-go": "^0.16.0",
-    "tree-sitter-html": "^0.16.0",
-    "tree-sitter-java": "^0.16.0",
-    "tree-sitter-javascript": "^0.16.0",
-    "tree-sitter-json": "^0.16.0",
-    "tree-sitter-php": "^0.16.1",
-    "tree-sitter-python": "^0.16.1",
-    "tree-sitter-ruby": "^0.16.1",
-    "tree-sitter-rust": "^0.16.0",
-    "tree-sitter-typescript": "^0.16.1",
+    "tree-sitter": "^0.20.1",
+    "tree-sitter-c": "^0.20.0",
+    "tree-sitter-cpp": "^0.20.0",
+    "tree-sitter-css": "^0.19.0",
+    "tree-sitter-go": "^0.19.0",
+    "tree-sitter-html": "^0.19.0",
+    "tree-sitter-java": "^0.19.0",
+    "tree-sitter-javascript": "^0.19.0",
+    "tree-sitter-json": "^0.19.0",
+    "tree-sitter-php": "^0.19.0",
+    "tree-sitter-python": "^0.19.0",
+    "tree-sitter-ruby": "^0.19.0",
+    "tree-sitter-rust": "^0.19.0",
+    "tree-sitter-typescript": "^0.19.0",
     "underscore-plus": "^1.7.0"
   },
   "devDependencies": {
