--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^25.2.3",
     "key-path-helpers": "^0.4.0",
     "line-top-index": "^0.3.1",
+    "localStorage": "^1.0.4",
     "lodash.isequal": "^4.5.0",
     "mkdirp": "^1.0.4",
     "native-keymap": "^3.3.4",
