--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "xedel",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "./build/exports.js",
   "scripts": {
+    "postinstall": "./scripts/install.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "workspaces": [
+    "./default-packages/language-javascript",
+    "./default-packages/vim-mode-plus",
     "./packages/oniguruma",
     "./packages/superstring",
     "./packages/text-buffer"
@@ -60,6 +63,9 @@
     "underscore-plus": "^1.7.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3"
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@types/node": "^20.3.0",
+    "typescript": "^5.1.3",
+    "typescript-cp": "^0.1.8"
   }
 }
