--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "./build/exports.js",
   "scripts": {
     "postinstall": "./scripts/install.sh",
+    "start": "concurrently 'npm:tsc:watch' 'npm:tscp:watch'",
+    "tsc:watch": "tsc --watch",
+    "tscp:watch": "tscp --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -65,6 +68,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@types/node": "^20.3.0",
+    "concurrently": "^8.2.0",
     "typescript": "^5.1.3",
     "typescript-cp": "^0.1.8"
   }
